# mini_turtle_oo_task

./: README.md  main.py  pyproject.toml
mini_turtle_oo/: __init__.py  turtle_class.py
